Added other R functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,16 @@ useDynLib(TEST, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 
 export(rcpp_hello_world)
+S3method(print,hybridoutput)
+S3method(print,puniformoutput)
+S3method(print,puni_staroutput)
+export(diffprior)
+export(escompute)
+export(fe_ma)
+export(fis_trans)
+export(hybrid)
 export(puniform)
+export(req_ni_r)
+export(snapshot)
+export(snapshot_naive)
+export(puni_star)
